<resources>

    <!-- App name -->

    <string name="app_name">News findeR</string>

    <!-- Preferences names -->

    <string name="tone_format">TONE_FORMAT</string>
    <string name="main_pref_dir">pref_dir</string>
    <string name="tone_format_key">TONE_FORMAT_KEY</string>
    <string name="selected_currency_key">SEL_CUR_KEY</string>
    <string name="selected_src_key">SEL_SRC_KEY</string>
    <string name="name_key">NAME_KEY</string>
    <string name="temperature_key">TEMP_KEY</string>
    <string name="weather_desc_key">W_DESC_KEY</string>
    <string name="weather_url_key">W_URL_KEY</string>
    <string name="time_of_last_save_key">SAVE_T_KEY</string>
    <string name="login_key">login</string>
    <string name="password_key">password</string>

    <!-- Headers for fragments -->

    <string name="add_bookmark">Добавить закладку</string>
    <string name="format_of_rating">Формат оценки</string>
    <string name="searching_news">Поиск новостей</string>
    <string name="currency_title">Курсы валют</string>
    <string name="hot_news">Горячие новости</string>
    <string name="bookmarks">Закладки</string>
    <string name="warning">Внимание !</string>
    <string name="sources">Источники</string>
    <string name="history">История</string>
    <string name="output_type">Формат</string>

    <!-- Responses from site -->

    <string name="something_went_wrong">Упс, что-то пошло не так</string>
    <string name="user_created_successful">Пользователь создан успешно</string>
    <string name="trouble_with_authorization">Возникла проблема с автоматической авторизацией</string>

    <!-- DOMAIN/TEXTS for sites -->

    <string name="lenta_domain">Lenta</string>
    <string name="lenta">Lenta</string>
    <string name="ria_domain">РИА Новости</string>
    <string name="ria">РИА</string>
    <string name="rbk_domain">РБК</string>
    <string name="rbk">РБК</string>
    <string name="meduza_domain">Meduza</string>
    <string name="meduza">Meduza</string>
    <string name="in_future"> --- </string>

    <!-- Toast's texts -->

    <string name="password_error">пароль должен содержать цифры, символы, и быть не короче 6 символов</string>
    <string name="no_internet">Отсутствует подключение к интернету</string>
    <string name="successful_changed">Успешно изменено</string>
    <string name="enter_name">введите пароль</string>

    <!-- Button's texts -->

    <string name="understand">Понятно</string>
    <string name="rename">Новое имя</string>
    <string name="currency">Валюты</string>
    <string name="log_out">Выйти</string>
    <string name="cancel">Отмена</string>
    <string name="add">добавить</string>

    <!-- Chips's texts -->

    <string name="positive">Позитивные</string>
    <string name="negative">Негативные</string>
    <string name="neutral">Нейтральные</string>
    <string name="number">численно</string>
    <string name="regarding">относительно</string>

    <!-- Info cards -->

    <string name="enter_theme">Введите тему, чтобы</string>
    <string name="know_more">узнать новое</string>
    <string name="is_empty_now">Здесь пока пусто</string>
    <string name="add_new">добавьте новую тему</string>

    <!-- Unsorted strings -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="are_you_sure">Вы уверены, что хотите выйти?</string>

    <string name="sort_to">сортировать </string>
    <string name="loading">Загрузка…</string>
    <string name="alphabet">алфавит</string>
    <string name="choice">выбор</string>
    <string name="view">Вид :</string>
    <string name="select_format">Выберете формат :</string>
    <string name="number_format_desc">Тональность статей Вы будете получать в численном формате (от 0 до 1), где 0 - очень негативныя новость, а 1 - позитивная</string>
    <string name="regarding_format_desc">Тональность статей Вы будете получать в словесном формате (новость может быть позитивной, нейтральной и негативной) </string>
    <string name="hint_enter_theme">введите тему</string>


</resources>