<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AlertDialogTheme">

    <RelativeLayout
        android:id="@+id/layout_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_round"
        android:paddingBottom="20dp">

        <View
            android:id="@+id/v_top"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/deep_gradient_top" />

        <TextView
            android:id="@+id/tv_title_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/monserrat"
            android:text="@string/format_of_rating"
            android:textColor="#FFF"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_select_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/v_top"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/select_format"
            android:textSize="15sp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_tone_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_select_format"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_number"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/number"
                android:textAlignment="center" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_regarding"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/regarding"
                android:textAlignment="center" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/tv_tone_format_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/chip_group_tone_format"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/regarding_format_desc"
            android:textAlignment="center" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/layout_history"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="-15dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/change_name_btn_ok"
        android:fontFamily="@font/monserrat"
        android:text="@string/understand"
        android:textColor="#FFF"
        android:textSize="15sp" />

</RelativeLayout>