<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background">

        <View
            android:id="@+id/v_top"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/deep_gradient_top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/warning"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="30dp"
            android:text="@string/are_you_sure"
            android:textSize="15sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/rl_min"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="-15dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_dismiss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/change_nama_dismiss"
            android:text="@string/cancel"
            android:textColor="#FFF"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@drawable/change_name_btn_ok"
            android:text="@string/log_out"
            android:textColor="#FFF"
            android:textSize="15sp" />


    </LinearLayout>

</RelativeLayout>